# recurrent-memory-scaffold

./: .gitignore  LICENSE  LICENSE-paper  README.md  pyproject.toml  requirements.txt
experiments/: analyze_grid.py  analyze_paper.py  analyze_probe.py  c_decode.py  figures.py  modal_app.py  oracle_eval.py  run_local.py  swap_eval.py
memrec/: __init__.py  data.py  models.py  ns.py  probe.py  train.py
paper/: main.tex  refs.bib
runs/: anneal2k_s512.jsonl  anneal_gated_s512.jsonl  anneal_gated_v96.jsonl  batch16_grid.jsonl  batch32_grid.jsonl  batch4_grid.jsonl  batch4_ns5.jsonl  batch64_grid.jsonl  batch64_v96_cosine.jsonl  batch64_v96_ns5.jsonl  batch8_grid.jsonl  batch8_ns5.jsonl  budget4k_baseline_s1024.jsonl  budget4k_baseline_s512.jsonl  c_decode_probe2k.jsonl  constlr12k_s512.jsonl  constlr2k_s512.jsonl  delta2k_s512.jsonl  factorial_ds11.jsonl  factorial_ds12.jsonl  factorial_ds13.jsonl  factorial_ds14.jsonl  frontier_v96s768.jsonl  grid_lr001.jsonl  grid_lr003.jsonl  grid_lr010.jsonl  ns02k_s512.jsonl  ns5_4k_s512.jsonl  ns5constlr2k_s512.jsonl  nsdose2k_s512.jsonl  oracle_probe2k.jsonl  planA_results.jsonl  probe2k_s512.jsonl  probe4k_baseline_s512.jsonl  qkboost2k_s512.jsonl  randk2k_s512.jsonl  rls2k_s512.jsonl  st2k_s512.jsonl  stack_s512_results.jsonl  swap_probe2k.jsonl
runs/ckpts/probe2k/: v80_s512_baseline_seed11_steps2000.pt  v80_s512_baseline_seed12_steps2000.pt  v80_s512_baseline_seed13_steps2000.pt  v80_s512_baseline_seed14_steps2000.pt  v80_s512_baseline_seed15_steps2000.pt  v80_s512_baseline_seed16_steps2000.pt  v80_s512_ns5_seed11_steps2000.pt  (+25 more)
